tests/invalid/bad_foreign_export.err_exp
bad_foreign_export.m:020: Error: a `:- pragma foreign_export' declaration must
bad_foreign_export.m:020:   have exactly three arguments.
bad_foreign_export.m:024: In second argument of `:- pragma foreign_export'
bad_foreign_export.m:024:   declaration: error: atom expected at 11111.
bad_foreign_export.m:028: In third argument of `:- pragma foreign_export'
bad_foreign_export.m:028:   declaration: error: expected a non-empty string for
bad_foreign_export.m:028:   the foreign language name of the exported
bad_foreign_export.m:028:   procedure, got `22222'.
bad_foreign_export.m:032: In first argument of `:- pragma foreign_export'
bad_foreign_export.m:032:   declaration: error: invalid foreign language
bad_foreign_export.m:032:   `"InvalidLanguage"'.
bad_foreign_export.m:037: In first argument of `:- pragma foreign_export'
bad_foreign_export.m:037:   declaration: error: invalid foreign language
bad_foreign_export.m:037:   `"InvalidLanguage"'.
bad_foreign_export.m:038: In second argument of `:- pragma foreign_export'
bad_foreign_export.m:038:   declaration: error: atom expected at 3333.
bad_foreign_export.m:039: In third argument of `:- pragma foreign_export'
bad_foreign_export.m:039:   declaration: error: expected a non-empty string for
bad_foreign_export.m:039:   the foreign language name of the exported
bad_foreign_export.m:039:   procedure, got `4444'.
bad_foreign_export.m:044: In third argument of `:- pragma foreign_export'
bad_foreign_export.m:044:   declaration: error: expected a non-empty string for
bad_foreign_export.m:044:   the foreign language name of the exported
bad_foreign_export.m:044:   procedure, got empty string.
